--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <description>A Druid Client for Java (mostly a thin wrapper around the existing one in druid-server)</description>
   <url>https://github.com/simplaex/java-druid-client</url>
 
-  <version>1.2.2</version>
+  <version>1.2.3</version>
   <packaging>jar</packaging>
 
   <scm>
@@ -19,7 +19,7 @@
     <developerConnection>scm:git:ssh://git@github.com:simplaex/dummies.git
     </developerConnection>
     <url>https://github.com/simplaex/dummies</url>
-    <tag>v1.2.0</tag>
+    <tag>v1.2.3</tag>
   </scm>
 
   <licenses>
@@ -33,6 +33,7 @@
     <java.version>1.8</java.version>
     <lombok.version>1.16.18</lombok.version>
     <druid.version>0.10.1</druid.version>
+    <bedrock.version>2018.03.11</bedrock.version>
     <junit.version>4.12</junit.version>
     <mockserver.version>3.10.8</mockserver.version>
   </properties>
@@ -150,7 +151,7 @@
     <dependency>
       <groupId>com.simplaex</groupId>
       <artifactId>bedrock</artifactId>
-      <version>2018.03.10</version>
+      <version>${bedrock.version}</version>
     </dependency>
 
     <dependency>
